src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhU-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width {  }\n    default-window-height {  }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 0 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1 × 688, bounds: 1239 × 688, states: [Activated]
